--- a/microservice-webapp/src/app/app.component.html
+++ b/microservice-webapp/src/app/app.component.html
@@ -7,57 +7,77 @@ from anywhere in the system. -->
 
 
 <html>
-  <div style="text-align:center">
-    <h1>
-        Liberty MicroProfile Dashboard
-    </h1>
-  </div>
-  <section class="login">
-    <alert></alert>
-    <router-outlet></router-outlet>
-  </section>
-  <section class= "microservice serviceA">
-    <h2> Your Spaceship Details: </h2>
-    <table>
-      <tr>
-        <th> Operating System </th>
-        <td> {{os}} </td>
-      </tr>
-      <tr>
-        <th> OS version </th>
-        <td> {{osVersion}} </td>
-      </tr>
-      <tr>
-        <th> OS Language </th>
-        <td> {{osLanguage}} </td>
-      </tr>
-      <tr>
-        <th> UserName </th>
-        <td> {{user}} </td>
-      </tr>
-      <tr>
-        <th> User Home </th>
-        <td> {{userHome}} </td>
-      </tr>
-      <br>
-      <br>
+    <div style="text-align:center">
+        <h1>
+            Liberty MicroProfile Dashboard
+        </h1>
+    </div>
+    <section class="login">
+      <alert></alert>
+      <router-outlet></router-outlet>
+    </section>
+    <section class= "microservice serviceA">
+      <h2> Your Spaceship Details: </h2>
+      <table>
+        <tr>
+          <th> Operating System </th>
+          <td> {{os}} </td>
+        </tr>
+        <tr>
+          <th> OS version </th>
+          <td> {{osVersion}} </td>
+        </tr>
+        <tr>
+          <th> OS Language </th>
+          <td> {{osLanguage}} </td>
+        </tr>
+        <tr>
+          <th> UserName </th>
+          <td> {{user}} </td>
+        </tr>
+        <tr>
+          <th> User Home </th>
+          <td> {{userHome}} </td>
+        </tr>
+        <tr>
+          <th> User ID </th>
+          <td> {{userID}} </td>
+        </tr>
+        <br>
+        <br>
+      </table>
       <img src="assets/logo.png" width="180" align="middle">
-    </table>
-  </section>
+      <br>
+      <button class="testingButton" type="button" (click)="healthStatusOne()">Health Status</button>
+      <br>
+      <h2 *ngIf="outcome1 !== undefined" class="health-{{outcome1.toLowerCase()}}">{{outcome1}}</h2>
+      <button class="testingButton" type="button" (click)="metricsStatusOne()">Metrics Status</button>
+    </section>
 
-  <section class= "microservice serviceB">
-    <h2> The Neighbouring Spaceship's Details: </h2>
-    <table>
-      <tr>
-        <th> Ship Name </th>
-        <td> {{shipName}} </td>
-      </tr>
-      <tr>
-        <th> Ship Type </th>
-        <td> {{shipType}} </td>
-      </tr>
-    </table>
-    <h2>{{outcome2}}</h2>
-  </section>
+    <section *ngIf="metricsOne === undefined"  class= "microservice serviceB">
+      <h2> The Neighbouring Spaceship's Details: </h2>
+      <table>
+        <tr>
+          <th> Ship Name </th>
+          <td> {{shipName}} </td>
+        </tr>
+        <tr>
+          <th> Ship Type </th>
+          <td> {{shipType}} </td>
+        </tr>
+      </table>
+      <button class="testingButton" type="button" (click)="healthStatusTwo()">Health Status</button>
+      <h2>{{outcome2}}</h2>
+    </section>
 
-</html>
+    <section *ngIf="metricsOne !== undefined"  class= "microservice serviceB">
+      <div class="metrics">
+        <h2> Microservice One Metrics </h2>
+        <pre> {{metricsOne}} </pre>
+      </div>
+      <button class="testingButton" type="button" (click)="closeStatus()">Close</button>
+    </section>
+
+    
+
+    </html>
