--- a/microservice-webapp/src/app/app.component.css
+++ b/microservice-webapp/src/app/app.component.css
@@ -1,6 +1,5 @@
   .microservice{
     border-color: white;
-    /* height: 400px; */
     width: 40%;
     position: relative;
     outline: white groove;
@@ -12,21 +11,8 @@
 
   .login{
     color: white;
-    /* margin-left: 1%;
-    margin-bottom: 5%; */
-    /* display: inline-block; */
     vertical-align: top;
   }
-
-
-  /* .serviceA{
-    top: 35%;
-    left:5%;
-  }
-  .serviceB{
-    top: 35%;
-    left: 52%;
-  } */
 
   .metrics {
     height: 30%;
@@ -49,29 +35,23 @@ pre{
   color: white;
 }
 
-  
+h1 {
+color: #FFFFFF;
+font-family: Arial, Helvetica, sans-serif;
+font-size: 250%;
+}
+h2 {
+color: #FFFFFF;
+font-family: Arial, Helvetica, sans-serif;
+font-size: 150%;
+text-align: center;
+}
 
-  h1 {
-  color: #FFFFFF;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
-  }
-  h2 {
-  color: #FFFFFF;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 150%;
-  text-align: center;
-  }
-  
-  .testingButton{
-    margin-top: 5%;
-    margin-left: 43%; 
-  }
+.health-metrics{
+  margin-top: 5%;
+  margin-left: 43%; 
+}
 
-  .health-up {
-    color: green;
-  }
-
-  .health-down {
-    color: red;
-  }
+.health-up {
+  color: green;
+}
